# tesse-segmentation-ros

./: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
launch/: semantic_segmentation_ros.launch  semantic_segmentation_tesse.launch  tesse_segmentation_ros.launch
src/semantic_segmentation_ros/: models.py  semantic_segmentation.py  utils.py
src/tesse_segmentation_ros/: models.py  semantic_segmentation.py  utils.py
training/: README.md  collect-segmentation-data.ipynb  requirements.txt  train-segmentation-models.ipynb
training/tesse_semantic_segmentation/: data.py  utils.py
